Resolving hero section overflow bug

--- a/my-portfolio/src/pages/hero/hero.css
+++ b/my-portfolio/src/pages/hero/hero.css
@@ -45,3 +45,9 @@
     flex-direction: column;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  .hero-section h1 {
+    font-size: var(--fs-800);
+  }
+}
